<resources>
    <string name="app_name">Laboratory Support</string>
    <string name="name_text">Name</string>
    <string name="choose_button">Choose Course</string>
    <string name="solicitation_text">Solicitation</string>
    <string name="study_checkbox">Study</string>

    <string name="bcc_text">BCC - Computer Science Bachelor</string>
    <string name="bsi_text">BSI - Information System Bachelor</string>
    <string name="lc_text">LC - Degree in Computation</string>
    <string name="select_button">Select</string>
</resources>
