<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:layout_margin="8dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/button_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_button"
            android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solicitation_text"
        android:layout_margin="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/study_checkbox"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"/>



</LinearLayout>